--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/framework": "^7.0",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.0",
+        "realrashid/sweet-alert": "^3.1",
         "spatie/laravel-permission": "^3.12"
     },
     "require-dev": {
